--- a/app/index.html
+++ b/app/index.html
@@ -5,21 +5,37 @@
     <title>Caso de estudio Phischel-FarmaTica</title>
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/farma.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body ng-controller="FarmaCtrl">
-     <h1>Bienvenido a  {{appName}} </h1>
-     <button type="button" class="btn btn-primary" uib-btn-checkbox >
-         Cliente
-     </button>
+<body ng-controller="FarmaController as farma">
+     <h1>Bienvenido a  {{farma.appName}} </h1>
 
+     <button type="button" class="btn btn-default" ng-click="isCollapsed = !isCollapsed">Toggle collapse</button>
+     <hr>
+     <div uib-collapse="isCollapsed">
+         <div class="well well-lg">Some content</div>
+     </div>
 
-
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+     {{farma.appName}}
+     <h1>Hello World Sample Program</h1>
+     </div>
+     <div>
+         <form class="form-horizontal" role="form">
+             <div class="form-group">
+                 <label class="col-md-2 control-label">Type Your Name</label>
+                 <div class="col-md-4">
+                     <input type="text" ng-model="name"  class="form-control" value="{{name}}"/>
+                     <span>Hello {{ name }}!</span>
+                 </div>
+             </div>
+         </form>
+     <script src="bower_components/angular/angular.js"></script>
+     <script src="bower_components/angular-route/angular-route.js"></script>
+     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+     <script src="js/app.js"></script>
+     <script src="js/controller.js"></script>
 
 </body>
 </html>
